# fastavro

./: .gitignore  CHANGES.md  LICENSE.md  README.md  checksum-Elixir.FastAvro.exs  cliff.toml  fastavro_samples.livemd  mix.exs
bench/: bench.exs  lte_202210.avro  lte_202210.avsc  lte_202210.json
lib/: fastavro.ex
native/fastavro/: Cargo.toml  README.md
native/fastavro/src/: binary.rs  lib.rs  record.rs
test/: fast_avro_normalized_test.exs  fast_avro_read_lf_terminated_test.exs  fastavro_errors_test.exs  fastavro_not_all_data_read_test.exs  fastavro_test.exs
