[package]
name = "fastavro"
version = "0.5.1"
authors = ["ramonpin"]
edition = "2021"

[lib]
name = "fastavro"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.32.1", features = ["nif_version_2_17"] }

[dependencies.apache-avro]
version = "0.14.0"
features = ["snappy"]
